ATLAS-5002 : Support Java 17 for build and runtime